WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309919
[IPC] [Hardened Mach Exceptions] Webkit should always use MPO_EXCEPTION_PORT
https://bugs.webkit.org/show_bug.cgi?id=309919
Summary
[IPC] [Hardened Mach Exceptions] Webkit should always use MPO_EXCEPTION_PORT
bkayes
Reported
2026-03-13 14:52:06 PDT
MPO_EXCEPTION_PORT is supported on all OS's past CG, we should always use it.
Attachments
Add attachment
proposed patch, testcase, etc.
bkayes
Comment 1
2026-03-14 12:34:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60637
Alexey Proskuryakov
Comment 2
2026-03-16 14:01:22 PDT
rdar://171098762
EWS
Comment 3
2026-03-16 23:32:35 PDT
Committed
309381@main
(a15c64e664f4): <
https://commits.webkit.org/309381@main
> Reviewed commits have been landed. Closing PR #60637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug