rdar://171098762 ([IPC] [Hardened Mach Exceptions] Webkit should always use MPO_EXCEPTION_PORT)

https://bugs.webkit.org/show_bug.cgi?id=309919

MPO_EXCEPTION_PORT is supported in all OS's since CrystalGlow, so webkit
should always use that flag.

Reviewed by Marcus Plutowski.

* Source/WTF/wtf/threads/Signals.cpp:
(WTF::initMachExceptionHandlerThread):

Canonical link: https://commits.webkit.org/309381@main